Order placing based on transaction confirmation by rabbitmq